fix poor alignment with lines in chat message

--- a/resources/assets/css/common/shame.less
+++ b/resources/assets/css/common/shame.less
@@ -40,3 +40,14 @@
   0%   {opacity: 0;}
   100% {opacity: 1;}
 }
+span {
+  > i {
+    > .iconpile {
+      height: .75em;
+      width: .75em;
+      [class|="stroke"] {
+        stroke-width: 12;
+      }
+    }
+  }
+}
